--- a/developer/myProjects.html
+++ b/developer/myProjects.html
@@ -42,7 +42,7 @@
             <td>Dipto Zaman</td>
             <td>July 11, 2017</td>
             <td>Running</td>
-            <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
+            <td><a href="dashboard.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
           </tr>
           <tr>
             <td scope="row">2</td>
@@ -51,7 +51,7 @@
             <td>Baky Forhad</td>
             <td>July 12, 2017</td>
             <td>Running</td>
-            <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
+            <td><a href="dashboard.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
           </tr>
           <tr>
             <td scope="row">3</td>
@@ -60,7 +60,7 @@
             <td>Ehsanul Haque</td>
             <td>July 12, 2017</td>
             <td>Running</td>
-            <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
+            <td><a href="dashboard.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
           </tr>
           <tr>
             <td scope="row">4</td>
@@ -69,7 +69,7 @@
             <td>Dipto Zaman</td>
             <td>July 13, 2017</td>
             <td>Completed</td>
-            <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
+            <td><a href="dashboard.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
           </tr>
           <tr>
             <td scope="row">5</td>
@@ -78,7 +78,7 @@
             <td>Dipto Zaman</td>
             <td>July 14, 2017</td>
             <td>Canceled</td>
-            <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
+            <td><a href="dashboard.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
           </tr>
           <tr>
             <td scope="row">6</td>
@@ -87,7 +87,7 @@
             <td>Dipto Zaman</td>
             <td>July 14, 2017</td>
             <td>Completed</td>
-            <td><a href="details.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
+            <td><a href="dashboard.html" class="btn btn-secondary"><i class="fa fa-angle-double-right"></i> Details</a></td>
           </tr>
 
         </tbody>
@@ -98,3 +98,8 @@
 </section>
 
 <!-- /.content -->
+<script type="text/javascript">
+$(document).ready(function() {
+  $('.table').DataTable();
+})
+</script>
