--- a/developer/myProfile.html
+++ b/developer/myProfile.html
@@ -30,9 +30,9 @@
         <div class="box-footer no-padding">
           <ul class="nav nav-stacked">
             <li><a href="#">Total Projects<span class="pull-right label label-primary">20</span> </a></li>
-            <li><a href="#">Running project <span class="pull-right label label-info" data-toggle="modal" data-target="#modal-info">5</span></a></li>
-            <li><a href="#">Completed Projects <span class="pull-right label label-success" data-toggle="modal" data-target="#modal-success">15</span></a></li>
-            <li><a href="#">Cancel <span class="pull-right label label-danger" data-toggle="modal" data-target="#modal-danger">0</span></a></li>
+            <li data-toggle="modal" data-target="#modal-info"><a href="#">Running project <span class="pull-right label label-info">5</span></a></li>
+            <li data-toggle="modal" data-target="#modal-success"><a href="#">Completed Projects <span class="pull-right label label-success">15</span></a></li>
+            <li data-toggle="modal" data-target="#modal-danger"><a href="#">Cancel <span class="pull-right label label-danger">0</span></a></li>
           </ul>
         </div>
       </div>
