--- a/mentor/dashboard.html
+++ b/mentor/dashboard.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Developer | DashBoard</title>
+  <title>Mentor | DashBoard</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -32,6 +32,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Google Font -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+  <link rel="stylesheet" type="text/css" href="../dist/css/dataTables.bootstrap.min.css">
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -41,7 +42,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="home.html" class="logo">
+    <a href="./navbar.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>M</b>P</span>
       <!-- logo for regular state and mobile devices -->
@@ -125,7 +126,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <!-- The user image in the navbar-->
               <img src="../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Ehsanul Haque</span>
+              <span class="hidden-xs">Dipto Zaman</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
@@ -133,17 +134,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Ehsanul Haque - Mentor
+                  Dipto Zaman - Mentor
                   <small>Member since Nov. 2017</small>
                 </p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="viewProfile.html" class="btn btn-default btn-flat">Profile</a>
+                  <button class="btn btn-default btn-flat">Profile</button>
                 </div>
                 <div class="pull-right">
-                  <a href="index.html" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="../index.html" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -168,7 +169,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Ehsanul Haque</p>
+          <p>Dipto Zaman</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
@@ -178,41 +179,33 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" id="overview"><i class="fa fa-link"></i> <span>OverView</span></a></li>
-        <li><a href="#" id="activity"><i class="fa fa-link"></i> <span>Activity</span></a></li>
-        <li class="treeview">
+        <li class="active"  id="overview"><a href="#"><i class="fa fa-link"></i> <span>OverView</span></a></li>
+        <li id="activity"><a href="#"><i class="fa fa-link"></i> <span>Activity</span></a></li>
+        <li class="treeview" id="issues">
           <a href="#"><i class="fa fa-link"></i> <span>Issues</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#" id="createIssue">Create Issue</a></li>
-            <li><a href="#" id="viewIssues">View Issue</a></li>
-            <li><a href="#" id="">Review Issue</a></li>
+            <li id="createIssue"><a href="#">Create Issue</a></li>
+            <li id="allIssues"><a href="#">All Issues</a></li>
+            <li id="myAssignedIssues"><a href="#">My Assigned Issues</a></li>
+            <li id="unassignedIssues"><a href="#">Unassigned Issues</a></li>
+            <li id="reviewIssues"><a href="#">Review Issue</a></li>
           </ul>
         </li>
 
-        <li class="treeview">
-          <a href="#"><i class="fa fa-link"></i> <span>Notice Board</span>
-            <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="#" class="notice">View Notice</a></li>
-            <li><a href="#" class="postNotice">Post Notice</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
+        <li id="noticeBoard"><a href="#"><i class="fa fa-link"></i> <span>Notice Board</span></a></li>
+        <li class="treeview" id="settings">
           <a href="#"><i class="fa fa-link"></i> <span>Settings</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#" id="teamSettings">Team settings</a></li>
-            <li><a href="#" id="projectSettings">Project </a></li>
+            <li id="teamSettings"><a href="#">Team Settings</a></li>
+            <li id="projectSettings"><a href="#">Project Settings</a></li>
           </ul>
         </li>
 
@@ -274,10 +267,116 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- AdminLTE for demo purposes -->
 <script src="../dist/js/demo.js"></script>
 
-<script src="js/page.js"></script>
+<script type="text/javascript" src="../dist/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="../dist/js/dataTables.bootstrap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" charset="utf-8"></script>
+
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. -->
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('.table').DataTable();
+
+    $('.content-wrapper').load("../shared/overview.html");
+
+
+
+
+    $('#overview').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').addClass("active");
+      $('#issues').removeClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#settings').removeClass("active");
+      $('.content-wrapper').load("../shared/overview.html");
+    });
+
+    $('#activity').on('click', () => {
+      $('#activity').addClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').removeClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("../shared/activity.html");
+    });
+
+    $('#createIssue').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').addClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("createIssue.html");
+    });
+
+    $('#allIssues').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').addClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("allIssues.html");
+    });
+
+    $('#unassignedIssues').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').addClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("unassignedIssues.html");
+    });
+
+    $('#reviewIssues').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').addClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("reviewIssues.html");
+    });
+
+    $('#myAssignedIssues').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').addClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("myIssues.html");
+    });
+
+    $('#noticeBoard').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').removeClass("active");
+      $('#noticeBoard').addClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("../shared/noticeBoard.html");
+    });
+
+    $('#teamSettings').on('click', () => {
+      $('#activity').removeClass("active");
+      $('#overview').removeClass("active");
+      $('#issues').removeClass("active");
+      $('#noticeBoard').removeClass("active");
+      $('#team').addClass("active");
+      $('.content-wrapper').load("team.html");
+    });
+
+    // $('#profile').on('click', () => {
+    //   $('#myProjects').removeClass("active");
+    //   $('#home').removeClass("active");
+    //   $('#myProfile').addClass("active");
+    //   $('#contact').removeClass("active");
+    //   $('#about').removeClass("active");
+    //   $('.content-wrapper').load("./navbar");
+    // });
+
+  });
+</script>
 </body>
 </html>
