--- a/mentor/navbar.html
+++ b/mentor/navbar.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Developer | DashBoard</title>
+  <title>Mentor | DashBoard</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -127,7 +127,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <!-- The user image in the navbar-->
               <img src="../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Ehsanul Haque</span>
+              <span class="hidden-xs">Dipto Zaman</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
@@ -135,17 +135,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Ehsanul Haque - Mentor
+                  Dipto Zaman - Mentor
                   <small>Member since Nov. 2017</small>
                 </p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="viewProfile.html" class="btn btn-default btn-flat">Profile</a>
+                  <button id="profile" class="btn btn-default btn-flat">Profile</button>
                 </div>
                 <div class="pull-right">
-                  <a href="index.html" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="../index.html" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -170,7 +170,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Ehsanul Haque</p>
+          <p>Dipto Zaman</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
@@ -180,21 +180,21 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" id="home"><i class="fa fa-link"></i> <span>Home</span></a></li>
-        <li><a href="#" id="myProfile"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
-        <li class="treeview">
+        <li class="active"  id="home"><a href="#"><i class="fa fa-link"></i> <span>Home</span></a></li>
+        <li id="myProfile"><a href="#"><i class="fa fa-link"></i> <span>My Profile</span></a></li>
+        <li class="treeview" id="projects">
           <a href="#"><i class="fa fa-link"></i> <span>Projects</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#" id="createProject">Create Project</a></li>
-            <li><a href="#" id="viewProjects">My Projects</a></li>
+            <li id="createProject"><a href="#">Create Project</a></li>
+            <li id="viewProjects"><a href="#">My Projects</a></li>
           </ul>
         </li>
-        <li><a href="#" id="about"><i class="fa fa-link"></i> <span>About Us</span></a></li>
-        <li><a href="#" id="contact"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
+        <li id="about"><a href="#"><i class="fa fa-link"></i> <span>About Us</span></a></li>
+        <li id="contact"><a href="#"><i class="fa fa-link"></i> <span>Contact Us</span></a></li>
 
       </ul>
       <!-- /.sidebar-menu -->
@@ -246,7 +246,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- AdminLTE for demo purposes -->
 <script src="../dist/js/demo.js"></script>
 
-<script src="js/page.js"></script>
+
 
 
 <script type="text/javascript" src="../dist/js/jquery.dataTables.min.js"></script>
@@ -262,7 +262,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     $('.content-wrapper').load("home.html");
 
     $('#home').on('click', () => {
-      $('#myProjects').removeClass("active");
+      $('#projects').removeClass("active");
       $('#home').addClass("active");
       $('#myProfile').removeClass("active");
       $('#contact').removeClass("active");
@@ -270,8 +270,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
       $('.content-wrapper').load("home.html");
     });
 
-    $('#myProjects').on('click', () => {
-      $('#myProjects').addClass("active");
+    $('#createProject').on('click', () => {
+      $('#projects').addClass("active");
+      $('#home').removeClass("active");
+      $('#myProfile').removeClass("active");
+      $('#contact').removeClass("active");
+      $('#about').removeClass("active");
+      $('.content-wrapper').load("createProject.html");
+    });
+
+    $('#viewProjects').on('click', () => {
+      $('#projects').addClass("active");
       $('#home').removeClass("active");
       $('#myProfile').removeClass("active");
       $('#contact').removeClass("active");
@@ -280,7 +289,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     });
 
     $('#myProfile').on('click', () => {
-      $('#myProjects').removeClass("active");
+      $('#projects').removeClass("active");
       $('#home').removeClass("active");
       $('#myProfile').addClass("active");
       $('#contact').removeClass("active");
@@ -289,7 +298,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     });
 
     $('#contact').on('click', () => {
-      $('#myProjects').removeClass("active");
+      $('#projects').removeClass("active");
       $('#home').removeClass("active");
       $('#myProfile').removeClass("active");
       $('#contact').addClass("active");
@@ -298,7 +307,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     });
 
     $('#about').on('click', () => {
-      $('#myProjects').removeClass("active");
+      $('#projects').removeClass("active");
       $('#home').removeClass("active");
       $('#myProfile').removeClass("active");
       $('#contact').removeClass("active");
