--- a/sponsor/dashboard.html
+++ b/sponsor/dashboard.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Developer | DashBoard</title>
+  <title>Sponsor | DashBoard</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -41,11 +41,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="home.html" class="logo">
+    <a href="./navbar.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>M</b>P</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Mentor</b>Portal</span>
+      <span class="logo-lg"><b></b>Portal</span>
     </a>
 
     <!-- Header Navbar -->
@@ -125,7 +125,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <!-- The user image in the navbar-->
               <img src="../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Ehsanul Haque</span>
+              <span class="hidden-xs">Baky Forhad</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
@@ -133,17 +133,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Ehsanul Haque - Sponsor
+                  Baky Forhad - Sponsor
                   <small>Member since Nov. 2017</small>
                 </p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="viewProfile.html" class="btn btn-default btn-flat">Profile</a>
+                  <button class="btn btn-default btn-flat">Profile</button>
                 </div>
                 <div class="pull-right">
-                  <a href="index.html" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="../index.html" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -168,7 +168,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Ehsanul Haque</p>
+          <p>Baky Forhad</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
@@ -178,19 +178,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="#" id="overview"><i class="fa fa-link"></i> <span>OverView</span></a></li>
-          <li class="active"><a href="#" id="Team"><i class="fa fa-link"></i> <span>Team</span></a></li>
-        <li class="treeview">
-          <a href="#"><i class="fa fa-link"></i> <span>Notice Board</span>
-            <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="#" class="notice">View Notice</a></li>
-            <li><a href="#" class="postNotice">Post Notice</a></li>
-          </ul>
-        </li>
+        <li class="active" id="overview"><a href="#"><i class="fa fa-link"></i> <span>OverView</span></a></li>
+        <li id="noticeBoard"><a href="#"><i class="fa fa-link"></i> <span>Notice Board</span></a></li>
+        <li id="team"><a href="#"><i class="fa fa-link"></i> <span>Team</span></a></li>
+
 
       </ul>
       <!-- /.sidebar-menu -->
@@ -249,11 +240,60 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script src="../dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="../dist/js/demo.js"></script>
-
-<script src="js/page.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" charset="utf-8"></script>
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. -->
+
+ <script type="text/javascript">
+  $(document).ready(function() {
+    
+
+    $('.content-wrapper').load("../shared/overview.html");
+
+
+
+
+    $('#overview').on('click', () => {
+
+      $('#overview').addClass("active");
+
+      $('#noticeBoard').removeClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("../shared/overview.html");
+    });
+
+
+
+    $('#noticeBoard').on('click', () => {
+
+      $('#overview').removeClass("active");
+
+      $('#noticeBoard').addClass("active");
+      $('#team').removeClass("active");
+      $('.content-wrapper').load("../shared/noticeBoard.html");
+    });
+
+    $('#team').on('click', () => {
+
+      $('#overview').removeClass("active");
+
+      $('#noticeBoard').removeClass("active");
+      $('#team').addClass("active");
+      $('.content-wrapper').load("team.html");
+    });
+
+    // $('#profile').on('click', () => {
+    //   $('#myProjects').removeClass("active");
+    //   $('#home').removeClass("active");
+    //   $('#myProfile').addClass("active");
+    //   $('#contact').removeClass("active");
+    //   $('#about').removeClass("active");
+    //   $('.content-wrapper').load("./navbar");
+    // });
+
+  });
+ </script>
 </body>
 </html>
