--- a/shared/register.html
+++ b/shared/register.html
@@ -36,7 +36,7 @@
   <div class="register-box-body">
     <p class="login-box-msg">Register a new membership</p>
 
-    <form action="login.html" method="post" id="registration-form">
+    <form action="../shared/login.html" method="" id="registration-form">
       <div class="form-group has-feedback">
         <input type="text" class="form-control" name="userName" placeholder="UserName">
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
