--- a/developer/navbar.html
+++ b/developer/navbar.html
@@ -315,7 +315,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       $('#myProfile').removeClass("active");
       $('#contact').addClass("active");
       $('#about').removeClass("active");
-      $('.content-wrapper').load("../mentor/reviewDoneIssue.html");
+      $('.content-wrapper').load("../shared/contact.html");
     });
 
     $('#about').on('click', () => {
@@ -324,7 +324,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       $('#myProfile').removeClass("active");
       $('#contact').removeClass("active");
       $('#about').addClass("active");
-      $('.content-wrapper').load("issueDetails.html");
+      $('.content-wrapper').load("../shared/about.html");
     });
 
   });
