--- a/developer/team.html
+++ b/developer/team.html
@@ -174,5 +174,19 @@
 
 </section>
 
+<script type="text/javascript">
+
+  $('.developer').on('click', function() {
+    $('.content-wrapper').load('developerProfile.html');
+  });
+
+  $('#mentor').on('click', function() {
+    $('.content-wrapper').load('mentorProfile.html');
+  });
+
+
+
+</script>
+
 
 <!-- /.content -->
