--- a/mentor/team.html
+++ b/mentor/team.html
@@ -179,5 +179,17 @@
 
 </section>
 
+<script type="text/javascript">
 
+  $('.developer').on('click', function() {
+    $('.content-wrapper').load('developerProfile.html');
+  });
+
+  $('#mentor').on('click', function() {
+    $('.content-wrapper').load('mentorProfile.html');
+  });
+
+
+
+</script>
 <!-- /.content -->
