--- a/sponsor/team.html
+++ b/sponsor/team.html
@@ -89,6 +89,18 @@
     <!-- /.modal -->
 
 </section>
+<script type="text/javascript">
 
+  $('.developer').on('click', function() {
+    $('.content-wrapper').load('developerProfile.html');
+  });
+
+  $('#mentor').on('click', function() {
+    $('.content-wrapper').load('mentorProfile.html');
+  });
+
+
+
+</script>
 
 <!-- /.content -->
